--- a/src/Assets/Styles/Variables/colors.scss
+++ b/src/Assets/Styles/Variables/colors.scss
@@ -1,2 +1,11 @@
-$cl-black: #000000;
+$cl-black0A: #0a0a0a;
+$cl-black22: #222222;
+$cl-blue00: #0000ff;
+$cl-blue10: #1084d0;
+$cl-blue33: #330099;
+$cl-grey80: #808080;
+$cl-greyA9: #a9a9a9;
+$cl-greyb5: #b5b5b5;
+$cl-greyC0: #c0c0c0;
+$cl-greyDF: #dfdfdf;
 $cl-white: #ffffff;
