--- a/src/Assets/Styles/Config/config.styles.scss
+++ b/src/Assets/Styles/Config/config.styles.scss
@@ -1,5 +1,8 @@
 @import '@Assets/Styles/Variables/colors.scss';
+@import '@Assets/Styles/Variables/fonts.scss';
+@import '@Assets/Styles/Utils/fonts.scss';
 @import '@Assets/Styles/Utils/hover.scss';
 @import '@Assets/Styles/Utils/media.scss';
+@import '@Assets/Styles/Utils/mixins.scss';
 @import '@Assets/Styles/General/reset.scss';
 @import '@Assets/Styles/General/base.scss';
