W98-0002: add component UIButton

--- a/src/Assets/Styles/Config/config.styles.scss
+++ b/src/Assets/Styles/Config/config.styles.scss
@@ -1,5 +1,6 @@
 @import '@Assets/Styles/Variables/colors.scss';
 @import '@Assets/Styles/Variables/fonts.scss';
+@import '@Assets/Styles/Variables/borders.scss';
 @import '@Assets/Styles/Utils/fonts.scss';
 @import '@Assets/Styles/Utils/hover.scss';
 @import '@Assets/Styles/Utils/media.scss';
