--- a/src/Assets/Styles/General/reset.scss
+++ b/src/Assets/Styles/General/reset.scss
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 *:focus {
