W98-0004: add component UIInput

--- a/src/Assets/Styles/Variables/borders.scss
+++ b/src/Assets/Styles/Variables/borders.scss
@@ -1,3 +1,5 @@
+$border-field-inner: inset -1px -1px $cl-white, inset 1px 1px $cl-grey80;
+$border-field-outer: inset -2px -2px $cl-greyDF, inset 2px 2px $cl-black0A;
 $border-raised-inner: inset -2px -2px $cl-grey80, inset 2px 2px $cl-greyDF;
 $border-raised-outer: inset -1px -1px $cl-black0A, inset 1px 1px $cl-white;
 $border-sunken-inner: inset -2px -2px $cl-greyDF, inset 2px 2px $cl-grey80;
