--- a/src/Assets/Styles/Utils/mixins.scss
+++ b/src/Assets/Styles/Utils/mixins.scss
@@ -7,3 +7,29 @@
     font: 400 ($font-size + px)/ ($line-height + px) $font-ms-sans-serif-medium;
   }
 }
+
+@mixin ui-range-track($position: 'horizontal') {
+  width: 100%;
+  height: 2px;
+  box-sizing: border-box;
+  background-color: $cl-black;
+  border-right: 1px solid $cl-grey80;
+  border-bottom: 1px solid $cl-grey80;
+  box-shadow: $border-range-inner, $border-range-outer;
+}
+
+@mixin ui-range-thumb($position: 'horizontal') {
+  @if $position == 'horizontal' {
+    background-image: url('~@/Assets/Icons/indicator-horizontal.svg');
+    transform: translateY(-8px);
+  }
+
+  @if $position == 'vertical' {
+    background-image: url('~@/Assets/Icons/indicator-rectangle-horizontal.svg');
+    transform: translateY(-10px);
+  }
+
+  -webkit-appearance: none;
+  height: 21px;
+  width: 11px;
+}
