--- a/src/Assets/Styles/Variables/colors.scss
+++ b/src/Assets/Styles/Variables/colors.scss
@@ -3,6 +3,7 @@ $cl-black0A: #0a0a0a;
 $cl-black22: #222222;
 $cl-blue00: #0000ff;
 $cl-blue10: #1084d0;
+$cl-blue007: #007b7b;
 $cl-blue33: #330099;
 $cl-grey80: #808080;
 $cl-greyA9: #a9a9a9;
