--- a/src/Assets/Styles/Config/config.styles.scss
+++ b/src/Assets/Styles/Config/config.styles.scss
@@ -1,8 +1,8 @@
-@import '@Assets/Styles/Variables/colors.scss';
-@import '@Assets/Styles/Variables/fonts.scss';
-@import '@Assets/Styles/Variables/borders.scss';
-@import '@Assets/Styles/Utils/fonts.scss';
-@import '@Assets/Styles/Utils/hover.scss';
-@import '@Assets/Styles/Utils/media.scss';
-@import '@Assets/Styles/Utils/mixins.scss';
-@import '@Assets/Styles/General/reset.scss';
+@import '@Assets/Styles/Variables/colors';
+@import '@Assets/Styles/Variables/fonts';
+@import '@Assets/Styles/Variables/borders';
+@import '@Assets/Styles/Utils/fonts';
+@import '@Assets/Styles/Utils/hover';
+@import '@Assets/Styles/Utils/media';
+@import '@Assets/Styles/Utils/mixins';
+@import '@Assets/Styles/General/reset';
