--- a/src/Assets/Styles/Utils/mixins.scss
+++ b/src/Assets/Styles/Utils/mixins.scss
@@ -1,10 +1,13 @@
 @mixin font($weight, $font-size, $line-height) {
   @if $weight == 'bold' {
-    font: 400 ($font-size + px)/ ($line-height + px) $font-ms-sans-serif-bold;
+    font: 400 ($font-size + px) / ($line-height + px) $font-ms-sans-serif-bold;
   }
 
   @if $weight == 'medium' {
-    font: 400 ($font-size + px)/ ($line-height + px) $font-ms-sans-serif-medium;
+    font: 400
+      ($font-size + px) /
+      ($line-height + px)
+      $font-ms-sans-serif-medium;
   }
 }
 
