--- a/src/Assets/Styles/Config/config.styles.scss
+++ b/src/Assets/Styles/Config/config.styles.scss
@@ -1,8 +1,8 @@
-@import '@Assets/Styles/Variables/colors';
-@import '@Assets/Styles/Variables/fonts';
-@import '@Assets/Styles/Variables/borders';
-@import '@Assets/Styles/Utils/fonts';
-@import '@Assets/Styles/Utils/hover';
-@import '@Assets/Styles/Utils/media';
-@import '@Assets/Styles/Utils/mixins';
-@import '@Assets/Styles/General/reset';
+@import '@Assets/Styles/Variables/Colors.styles';
+@import '@Assets/Styles/Variables/Fonts.styles';
+@import '@Assets/Styles/Variables/Borders.styles';
+@import '@Assets/Styles/Utils/Fonts.styles';
+@import '@Assets/Styles/Utils/Hover.styles';
+@import '@Assets/Styles/Utils/Media.styles';
+@import '@Assets/Styles/Utils/Mixins.styles';
+@import '@Assets/Styles/General/Reset.styles';
