--- a/src/Assets/Styles/Utils/Fonts.styles.scss
+++ b/src/Assets/Styles/Utils/Fonts.styles.scss
@@ -1,31 +1,23 @@
 $ms-sans-serif-medium: 'MSSansSerifMedium';
-$src-ms-sans-serif-medium: '@Assets/Fonts/#{$ms-sans-serif-medium}/#{$ms-sans-serif-medium}';
+$src-ms-sans-serif-medium: '/fonts/#{$ms-sans-serif-medium}';
 
 @font-face {
   font-family: $ms-sans-serif-medium;
-  src: url('#{$src-ms-sans-serif-medium}.svg##{$ms-sans-serif-medium}')
-      format('svg'),
-    url('#{$src-ms-sans-serif-medium}.ttf') format('truetype'),
-    url('#{$src-ms-sans-serif-medium}.woff') format('woff'),
-    url('#{$src-ms-sans-serif-medium}.woff2') format('woff2'),
-    url('#{$src-ms-sans-serif-medium}.eot'),
-    url('#{$src-ms-sans-serif-medium}.eot?#iefix') format('embedded-opentype');
+  src: url('#{$src-ms-sans-serif-medium}.woff') format('woff'),
+    url('#{$src-ms-sans-serif-medium}.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 $ms-sans-serif-bold: 'MSSansSerifBold';
-$src-ms-sans-serif-bold: '@Assets/Fonts/#{$ms-sans-serif-bold}/#{$ms-sans-serif-bold}';
+$src-ms-sans-serif-bold: '/fonts/#{$ms-sans-serif-bold}';
 
 @font-face {
   font-family: $ms-sans-serif-bold;
-  src: url('#{$src-ms-sans-serif-bold}.svg##{$ms-sans-serif-bold}')
-      format('svg'),
-    url('#{$src-ms-sans-serif-bold}.ttf') format('truetype'),
-    url('#{$src-ms-sans-serif-bold}.woff') format('woff'),
-    url('#{$src-ms-sans-serif-bold}.woff2') format('woff2'),
-    url('#{$src-ms-sans-serif-bold}.eot'),
-    url('#{$src-ms-sans-serif-bold}.eot?#iefix') format('embedded-opentype');
+  src: url('#{$src-ms-sans-serif-bold}.woff') format('woff'),
+    url('#{$src-ms-sans-serif-bold}.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
