--- a/src/Assets/Styles/Variables/Colors.styles.scss
+++ b/src/Assets/Styles/Variables/Colors.styles.scss
@@ -2,6 +2,7 @@ $cl-black: #000000;
 $cl-black0A: #0a0a0a;
 $cl-black22: #222222;
 $cl-blue00: #0000ff;
+$cl-blue000: #000080;
 $cl-blue10: #1084d0;
 $cl-blue007: #007b7b;
 $cl-blue33: #330099;
