--- a/src/Bundles/UIBundle/Styles/UIModal.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIModal.styles.scss
@@ -1,3 +1,31 @@
 .UIModal {
-  background: red;
+  display: grid;
+  grid-template-rows: 20px calc(100% - 16px);
+  padding: 3px;
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 20px;
+    padding: 3px 2px 3px 3px;
+  }
+
+  .title {
+    @include font('bold', 11, 13);
+  }
+
+  .content {
+    margin: 8px;
+  }
+
+  &.variant-primary {
+    background-color: $cl-greyC0;
+    box-shadow: $border-raised-outer, $border-raised-inner;
+
+    .header {
+      color: $cl-white;
+      background: linear-gradient(90deg, $cl-blue000, $cl-blue10);
+    }
+  }
 }
