--- a/src/Bundles/UIBundle/Styles/UIModal.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIModal.styles.scss
@@ -2,6 +2,10 @@
   display: grid;
   grid-template-rows: 20px calc(100% - 16px);
   padding: 3px;
+  min-height: 110px;
+  min-width: 190px;
+  max-width: 100%;
+  max-height: 100%;
 
   .header {
     display: flex;
@@ -27,5 +31,10 @@
       color: $cl-white;
       background: linear-gradient(90deg, $cl-blue000, $cl-blue10);
     }
+  }
+
+  &.resize-window {
+    resize: both;
+    overflow: auto;
   }
 }
