--- a/src/Bundles/UIBundle/Styles/UIModal.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIModal.styles.scss
@@ -43,7 +43,7 @@
   }
 
   &.move-window {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
