style component ShutDown

--- a/src/Bundles/ShutDownBundle/Styles/ShutDown.styles.scss
+++ b/src/Bundles/ShutDownBundle/Styles/ShutDown.styles.scss
@@ -1,3 +1,36 @@
 .ShutDown {
-  color: black;
+  .content {
+    display: grid;
+    grid-template-columns: 45px 85px 80px 85px;
+    grid-template-rows: 25px 22px 20px 35px 22px;
+    padding: 21px 17px 9px;
+  }
+
+  .icon {
+    grid-area: 1 / 1 / 2 / 3;
+  }
+
+  .description {
+    grid-area: 1 / 2 / 2 / 5;
+  }
+
+  .checkbox-shut-down {
+    grid-area: 2 / 2 / 3 / 5;
+  }
+
+  .checkbox-restart {
+    grid-area: 3 / 2 / 4 / 5;
+  }
+
+  .button {
+    width: 78px;
+
+    &.is-ok {
+      grid-area: 5 / 2 / 6 / 3;
+    }
+
+    &.is-cancel {
+      grid-area: 5 / 3 / 6 / 4;
+    }
+  }
 }
