--- a/src/Bundles/UIBundle/Styles/UIModal.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIModal.styles.scss
@@ -1,12 +1,11 @@
 .UIModal {
   .container {
-    display: grid;
-    grid-template-rows: 20px calc(100% - 16px);
     padding: 3px;
     min-height: 110px;
     min-width: 190px;
     max-width: 100%;
     max-height: 100%;
+    margin: auto;
   }
 
   .header {
@@ -19,10 +18,6 @@
 
   .title {
     @include font('bold', 11, 13);
-  }
-
-  .content {
-    margin: 8px;
   }
 
   &.variant-primary {
