--- a/src/Bundles/CalculatorBundle/Styles/CalculatorDisplay.styles.scss
+++ b/src/Bundles/CalculatorBundle/Styles/CalculatorDisplay.styles.scss
@@ -1,3 +1,8 @@
 .CalculatorDisplay {
-  color: black;
+  background-color: $cl-white;
+  width: 100%;
+  height: 20px;
+  padding: 5px;
+  text-align: right;
+  box-shadow: $border-field-inner, $border-field-outer;
 }
