--- a/src/Bundles/NotepadBundle/Styles/Notepad.styles.scss
+++ b/src/Bundles/NotepadBundle/Styles/Notepad.styles.scss
@@ -1,3 +1,12 @@
 .Notepad {
-  color: black;
+  .content {
+    padding: 2px;
+    width: 100%;
+    height: calc(100% - 20px);
+  }
+
+  .textarea {
+    width: 100%;
+    height: 100%;
+  }
 }
