--- a/src/Bundles/UIBundle/Styles/UITextarea.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UITextarea.styles.scss
@@ -6,7 +6,6 @@
 
   .textarea {
     padding: 3px 4px;
-    height: 21px;
 
     &:focus {
       outline: none;
@@ -23,10 +22,20 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    flex-basis: 200px;
 
     .label {
       margin-bottom: 5px;
+    }
+  }
+
+  &.type-notepad {
+    .textarea {
+      width: 100%;
+      height: 100%;
+      @include font('medium', 14, 18);
+      letter-spacing: 1px;
+      padding: 5px;
+      resize: none;
     }
   }
 
