--- a/src/Bundles/UIBundle/Styles/UIInput.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIInput.styles.scss
@@ -7,6 +7,7 @@
   .input {
     padding: 3px 4px;
     height: 21px;
+    width: 100%;
 
     &:focus {
       outline: none;
@@ -14,6 +15,9 @@
   }
 
   &.label-position-left {
+    display: flex;
+    align-items: center;
+
     .label {
       margin-right: 6px;
     }
