--- a/src/Bundles/UIBundle/Styles/UIRadio.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIRadio.styles.scss
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('icons/radio.svg') center center no-repeat;
+    background: url('/icons/radio.svg') center center no-repeat;
     height: 12px;
     width: 12px;
 
@@ -19,7 +19,7 @@
       content: none;
       width: 4px;
       height: 4px;
-      background: url('icons/radio-checked.svg') center center no-repeat;
+      background: url('/icons/radio-checked.svg') center center no-repeat;
     }
   }
 
