--- a/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerStatus.styles.scss
+++ b/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerStatus.styles.scss
@@ -1,4 +1,5 @@
 .MediaPlayerStatus {
-  width: 100%;
-  height: 100%;
+  color: $cl-white;
+  @include font('medium', 11, 19);
+  text-transform: capitalize;
 }
