--- a/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerControls.styles.scss
+++ b/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerControls.styles.scss
@@ -1,4 +1,20 @@
 .MediaPlayerControls {
+  display: grid;
   width: 100%;
-  height: 100%;
+  height: 60px;
+  padding: 5px;
+  grid-template-columns: repeat(3, 30px) auto 30px 50px;
+  grid-template-rows: repeat(2, 25px);
+
+  .progress {
+    grid-area: 1 / 1 / 2 / 7;
+  }
+
+  .button-mute {
+    grid-area: 2 / 5 / 3 / 6;
+  }
+
+  .volume-control {
+    grid-area: 2 / 6 / 4 / 7;
+  }
 }
