--- a/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerButtonControl.styles.scss
+++ b/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerButtonControl.styles.scss
@@ -1,4 +1,47 @@
 .MediaPlayerButtonControl {
-  width: 100%;
-  height: 100%;
+  &.active {
+    background-color: $cl-greyC0;
+    box-shadow: $border-field-inner, $border-field-outer;
+  }
+
+  &.type-play {
+    &::before {
+      content: '';
+      border-top: 6px solid transparent;
+      border-bottom: 6px solid transparent;
+      border-left: 6px solid $cl-black;
+    }
+  }
+
+  &.type-stop {
+    &::before {
+      content: '';
+      width: 8px;
+      height: 8px;
+      background-color: $cl-black;
+    }
+  }
+
+  &.type-pauza {
+    &::before,
+    &::after {
+      content: '';
+      width: 3px;
+      height: 8px;
+      background-color: $cl-black;
+    }
+
+    &::before {
+      margin-right: 2px;
+    }
+  }
+
+  &.type-mute {
+    &::before {
+      content: '';
+      width: 15px;
+      height: 15px;
+      background: $cl-white url('/icons/sound.png') center center no-repeat;
+    }
+  }
 }
