--- a/src/Bundles/UIBundle/Styles/UIButton.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIButton.styles.scss
@@ -16,6 +16,11 @@
     box-shadow: $border-sunken-outer, $border-sunken-inner;
   }
 
+  &.size-media-player {
+    width: 22px;
+    height: 22px;
+  }
+
   &.size-calculator {
     width: 35px;
     height: 30px;
