style volume control

--- a/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerButtonControl.styles.scss
+++ b/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerButtonControl.styles.scss
@@ -41,7 +41,7 @@
       content: '';
       width: 15px;
       height: 15px;
-      background: $cl-white url('/icons/sound.png') center center no-repeat;
+      background: url('/icons/sound.png') center center no-repeat;
     }
   }
 }
