--- a/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerVolumeControl.styles.scss
+++ b/src/Bundles/MediaPlayerBundle/Styles/MediaPlayerVolumeControl.styles.scss
@@ -1,4 +1,41 @@
 .MediaPlayerVolumeControl {
-  width: 100%;
-  height: 100%;
+  position: relative;
+  width: 50px;
+  height: 20px;
+  margin-top: auto;
+
+  .progress {
+    position: absolute;
+    top: 0;
+    border-radius: 2px;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+
+    &::-webkit-progress-bar {
+      background-color: $cl-greyC0;
+      box-shadow: $border-field-inner, $border-field-outer;
+    }
+  }
+
+  .input {
+    position: absolute;
+    top: 1px;
+    width: 100%;
+    margin: 0;
+    height: 100%;
+    background: transparent;
+    cursor: pointer;
+
+    &:focus {
+      outline: none;
+    }
+
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      height: 21px;
+      width: 11px;
+      background-color: $cl-greyDF;
+    }
+  }
 }
