add root and dark theme for UIButton

--- a/src/Assets/Styles/Config/config.styles.scss
+++ b/src/Assets/Styles/Config/config.styles.scss
@@ -6,3 +6,4 @@
 @import '@Assets/Styles/Utils/Media.styles';
 @import '@Assets/Styles/Utils/Mixins.styles';
 @import '@Assets/Styles/General/Reset.styles';
+@import '@Assets/Styles/Variables/Root.styles';
