--- a/src/Assets/Styles/Variables/Colors.styles.scss
+++ b/src/Assets/Styles/Variables/Colors.styles.scss
@@ -7,6 +7,8 @@ $cl-blue10: #1084d0;
 $cl-blue007: #007b7b;
 $cl-blue33: #330099;
 $cl-grey80: #808080;
+$cl-grey9b: #9b9b9b;
+$cl-grey3b: #3b3b3b;
 $cl-greyA9: #a9a9a9;
 $cl-greyb5: #b5b5b5;
 $cl-greyC0: #c0c0c0;
