--- a/src/Bundles/UIBundle/Styles/UIButton.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIButton.styles.scss
@@ -4,16 +4,17 @@
   align-items: center;
   @include font('medium', 11, 11);
   border: none;
-  box-shadow: $border-raised-outer, $border-raised-inner;
   border-radius: 0;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  box-shadow: var(--box-shadow-raised);
 
   &:disabled {
-    text-shadow: 1px 1px 0 $cl-white;
     pointer-events: none;
   }
 
   &:not(:disabled):active {
-    box-shadow: $border-sunken-outer, $border-sunken-inner;
+    box-shadow: var(--box-shadow-sunken);
   }
 
   &.size-media-player {
@@ -45,10 +46,5 @@
     &:not(:disabled):active {
       padding: 2px 11px 0 13px;
     }
-  }
-
-  &.variant-primary {
-    background-color: $cl-greyC0;
-    color: $cl-black22;
   }
 }
