set dark theme for UIInput

--- a/src/Assets/Styles/Variables/Root.styles.scss
+++ b/src/Assets/Styles/Variables/Root.styles.scss
@@ -1,5 +1,6 @@
 :root.theme-light {
   --background-color: #{$cl-greyC0};
+  --border-field: #{$border-field-inner}, #{$border-field-outer};
   --box-shadow-raised: #{$border-raised-outer}, #{$border-raised-inner};
   --box-shadow-sunken: #{$border-sunken-outer}, #{$border-sunken-inner};
   --text-color: #{$cl-black22};
@@ -7,6 +8,7 @@
 
 :root.theme-dark {
   --background-color: #{$cl-grey3b};
+  --border-field: #{$border-field-inner-dark}, #{$border-field-outer-dark};
   --box-shadow-raised: #{$border-raised-outer-dark},
     #{$border-raised-inner-dark};
   --box-shadow-sunken: #{$border-sunken-outer-dark},
