--- a/src/Bundles/UIBundle/Styles/UIModal.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIModal.styles.scss
@@ -22,7 +22,7 @@
 
   &.variant-primary {
     .container {
-      background-color: $cl-greyC0;
+      background-color: var(--background-color);
       box-shadow: $border-raised-outer, $border-raised-inner;
     }
 
