--- a/src/Bundles/UIBundle/Styles/UISelect.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UISelect.styles.scss
@@ -1,8 +1,8 @@
 .UISelect {
   position: relative;
   height: 21px;
-  background: var(--background-color) url('/icons/select-button.svg') no-repeat
-    top 2px right 2px;
+  background: var(--background-color-white) url('/icons/select-button.svg')
+    no-repeat top 2px right 2px;
   box-shadow: var(--border-field);
   padding: 5px 25px 5px 5px;
   color: var(--text-color);
