set dark theme for UIModal

--- a/src/Assets/Styles/Variables/Colors.styles.scss
+++ b/src/Assets/Styles/Variables/Colors.styles.scss
@@ -5,6 +5,7 @@ $cl-blue00: #0000ff;
 $cl-blue000: #000080;
 $cl-blue10: #1084d0;
 $cl-blue007: #007b7b;
+$cl-blue0f: #0f0f81;
 $cl-blue33: #330099;
 $cl-grey80: #808080;
 $cl-grey9b: #9b9b9b;
