--- a/src/Bundles/ClockBundle/Styles/Clock.styles.scss
+++ b/src/Bundles/ClockBundle/Styles/Clock.styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   margin-left: auto;
-  color: $cl-black22;
+  color: var(--text-color);
   @include font('medium', 12, 12);
   letter-spacing: 0.7px;
 }
