--- a/src/Assets/Styles/Variables/Borders.styles.scss
+++ b/src/Assets/Styles/Variables/Borders.styles.scss
@@ -9,10 +9,8 @@ $border-range-inner: 1px 0 0 $cl-white, 1px 1px 0 $cl-white, 0 1px 0 $cl-white,
 $border-range-outer: -1px -1px 0 $cl-greyC0, 0 -1px 0 $cl-greyC0,
   -1px 1px 0 $cl-white, 1px -1px $cl-greyC0;
 
-$border-field-outer-dark: inset -2px -2px #8b8b8b, inset 2px 2px $cl-black;
-$border-field-inner-dark: inset -1px -1px #8b8b8b, inset 1px 1px $cl-black;
-
-// inset -1px -1px #8b8b8b, inset 1px 1px #000000, inset -2px -2px #000000, inset 2px 2px #000000;
+$border-field-outer-dark: inset -2px -2px $cl-grey8b, inset 2px 2px $cl-black;
+$border-field-inner-dark: inset -1px -1px $cl-grey8b, inset 1px 1px $cl-black;
 
 $border-raised-outer-dark: inset -1px -1px $cl-black0A, inset 1px 1px $cl-grey9b;
 $border-raised-inner-dark: inset -2px -2px $cl-black, inset 2px 2px $cl-grey80;
