--- a/src/Assets/Styles/Variables/Colors.styles.scss
+++ b/src/Assets/Styles/Variables/Colors.styles.scss
@@ -8,6 +8,7 @@ $cl-blue007: #007b7b;
 $cl-blue0f: #0f0f81;
 $cl-blue33: #330099;
 $cl-grey80: #808080;
+$cl-grey8b: #8b8b8b;
 $cl-grey9b: #9b9b9b;
 $cl-grey3b: #3b3b3b;
 $cl-greyA9: #a9a9a9;
