set dark theme for Pulpit

--- a/src/Bundles/PulpitBundle/Styles/Pulpit.styles.scss
+++ b/src/Bundles/PulpitBundle/Styles/Pulpit.styles.scss
@@ -1,7 +1,7 @@
 .Pulpit {
   width: 100vw;
   height: calc(100vh - 28px);
-  background-color: $cl-blue007;
+  background-color: var(--background-color-pulpit);
   padding: 1px;
   display: grid;
   grid-column-gap: 5px;
