--- a/src/Assets/Styles/Variables/Root.styles.scss
+++ b/src/Assets/Styles/Variables/Root.styles.scss
@@ -6,6 +6,8 @@
     #{$cl-blue000},
     #{$cl-blue10}
   );
+  --background-color-pulpit: #{$cl-blue007};
+
   --border-field: #{$border-field-inner}, #{$border-field-outer};
   --box-shadow-raised: #{$border-raised-outer}, #{$border-raised-inner};
   --box-shadow-sunken: #{$border-sunken-outer}, #{$border-sunken-inner};
@@ -22,6 +24,8 @@
     #{$cl-blue33},
     #{$cl-blue0f}
   );
+  --background-color-pulpit: #{$cl-black};
+
   --border-field: #{$border-field-inner-dark}, #{$border-field-outer-dark};
   --box-shadow-raised: #{$border-raised-outer-dark},
     #{$border-raised-inner-dark};
