set dark theme for StartPanel and CalculatorDisplay

--- a/src/Bundles/StartBundle/Styles/StartPanel.styles.scss
+++ b/src/Bundles/StartBundle/Styles/StartPanel.styles.scss
@@ -1,7 +1,7 @@
 .StartPanel {
-  background-color: $cl-greyC0;
-  border-top: 1px solid $cl-white;
-  border-left: 1px solid $cl-white;
+  background-color: var(--background-color);
+  border-top: 1px solid var(--border-color-navigation);
+  border-left: 1px solid var(--border-color-navigation);
   border-right: 1px solid $cl-black;
   border-bottom: 1px solid $cl-black;
   min-width: 140px;
