--- a/src/Bundles/CalculatorBundle/Styles/CalculatorDisplay.styles.scss
+++ b/src/Bundles/CalculatorBundle/Styles/CalculatorDisplay.styles.scss
@@ -1,8 +1,9 @@
 .CalculatorDisplay {
-  background-color: $cl-white;
+  background-color: var(--background-color-white);
+  color: var(--text-color);
   width: 100%;
   height: 20px;
   padding: 5px;
   text-align: right;
-  box-shadow: $border-field-inner, $border-field-outer;
+  box-shadow: var(--border-field);
 }
