--- a/src/Bundles/UIBundle/Styles/UISelect.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UISelect.styles.scss
@@ -1,9 +1,10 @@
 .UISelect {
   position: relative;
   height: 21px;
-  background: $cl-white url('/icons/select-button.svg') no-repeat top 2px right
-    2px;
-  box-shadow: $border-field-inner, $border-field-outer;
+  background: var(--background-color-white) url('/icons/select-button.svg')
+    no-repeat top 2px right 2px;
+  box-shadow: var(--border-field);
   padding: 5px 25px 5px 5px;
+  color: var(--text-color);
   @include font('medium', 11, 13);
 }
