--- a/src/Assets/Styles/Variables/Colors.styles.scss
+++ b/src/Assets/Styles/Variables/Colors.styles.scss
@@ -10,6 +10,7 @@ $cl-blue33: #330099;
 $cl-grey3b: #3b3b3b;
 $cl-grey80: #808080;
 $cl-grey8b: #8b8b8b;
+$cl-grey96: #969696;
 $cl-grey9b: #9b9b9b;
 $cl-greyA9: #a9a9a9;
 $cl-greyb5: #b5b5b5;
