--- a/src/Assets/Styles/Variables/Root.styles.scss
+++ b/src/Assets/Styles/Variables/Root.styles.scss
@@ -11,9 +11,14 @@
   --border-field: #{$border-field-inner}, #{$border-field-outer};
   --box-shadow-raised: #{$border-raised-outer}, #{$border-raised-inner};
   --box-shadow-sunken: #{$border-sunken-outer}, #{$border-sunken-inner};
+
   --text-color: #{$cl-black22};
   --text-color-2: #{$cl-white};
+  --text-color-3: #{$cl-greyb5};
+
   --border-color-navigation: #{$cl-white};
+  --border-color-frame-1: rgba(255, 255, 255, 0.7);
+  --border-color-frame-2: #{$cl-grey96};
 }
 
 :root.theme-dark {
@@ -31,7 +36,12 @@
     #{$border-raised-inner-dark};
   --box-shadow-sunken: #{$border-sunken-outer-dark},
     #{$border-sunken-inner-dark};
+
   --text-color: #{$cl-grey9b};
   --text-color-2: #{$cl-grey9b};
+  --text-color-3: #{$cl-black};
+
   --border-color-navigation: #{$cl-grey8b};
+  --border-color-frame-1: transparent;
+  --border-color-frame-2: #{$cl-grey96};
 }
