--- a/src/Bundles/FileBundle/Styles/File.styles.scss
+++ b/src/Bundles/FileBundle/Styles/File.styles.scss
@@ -1,3 +1,9 @@
 .FileDownload {
-  margin: 5;
+  position: absolute;
+
+  .content {
+    display: grid;
+    grid-template-rows: 20px 130px 20px 20px;
+    padding: 5px;
+  }
 }
