--- a/src/Bundles/UIBundle/Styles/UIModal.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIModal.styles.scss
@@ -24,6 +24,10 @@
     @include font('bold', 11, 13);
   }
 
+  .options {
+    padding: 1px 2px;
+  }
+
   &.resize-window {
     resize: both;
     overflow: auto;
