add component tests for NotepadBundle

--- a/src/Assets/Styles/Config/Cypress.styles.scss
+++ b/src/Assets/Styles/Config/Cypress.styles.scss
@@ -19,3 +19,12 @@ body,
 .FileSave {
   position: static !important;
 }
+
+.Notepad {
+  .FileSave {
+    position: absolute !important;
+    top: 50% !important;
+    right: 50% !important;
+    transform: translate(50%, -50%) !important;
+  }
+}
