--- a/src/Bundles/UIBundle/Styles/UICheckbox.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UICheckbox.styles.scss
@@ -11,14 +11,16 @@
     display: block;
     width: 100%;
     height: 100%;
-    background: url('~@/Assets/Icons/checkmark.svg') center center no-repeat;
+    background: url('/icons/checkmark.svg') center center no-repeat;
     opacity: 0;
   }
 
   .checkmark {
     display: block;
-    height: 13px;
-    width: 13px;
+    height: 12px;
+    width: 12px;
+    background-color: $cl-white;
+    border: 1px solid $cl-black;
   }
 
   .text {
@@ -26,17 +28,16 @@
   }
 
   .input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+    height: 1px;
+    width: 1px;
 
     &[disabled] {
       & + .checkmark {
         pointer-events: none;
 
         .icon {
-          background: url('~@/Assets/Icons/checkmark-disabled.svg') center
-            center no-repeat;
+          background: url('/icons/checkmark-disabled.svg') center center
+            no-repeat;
           opacity: 1;
         }
       }
