add tests for component UIRadio

--- a/src/Bundles/UIBundle/Styles/UIRadio.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIRadio.styles.scss
@@ -28,9 +28,8 @@
   }
 
   .input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+    width: 1px;
+    height: 1px;
 
     &[disabled] {
       pointer-events: none;
