add bundle Audio without tests

--- a/src/Bundles/ClockBundle/Styles/Clock.styles.scss
+++ b/src/Bundles/ClockBundle/Styles/Clock.styles.scss
@@ -1,7 +1,7 @@
 .Clock {
   display: flex;
   align-items: center;
-  margin-left: auto;
+  margin-left: 5px;
   color: var(--text-color);
   @include font('medium', 12, 12);
   letter-spacing: 0.7px;
