--- a/src/Bundles/TicTacToeBundle/Styles/TicTacToeChoosePlayer.styles.scss
+++ b/src/Bundles/TicTacToeBundle/Styles/TicTacToeChoosePlayer.styles.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 40px 40px 1fr;
   grid-template-rows: 1fr 1fr;
 
-  .description {
+  .title {
     grid-area: 1 / 1 / 2 / 4;
     margin-bottom: 5px;
   }
