--- a/src/Bundles/TicTacToeBundle/Styles/TicTacToeChooseDimension.styles.scss
+++ b/src/Bundles/TicTacToeBundle/Styles/TicTacToeChooseDimension.styles.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 45px) 1fr;
   grid-template-rows: 1fr 1fr;
+  margin-bottom: 10px;
 
   .title {
     grid-area: 1 / 1 / 2 / 5;
