add component TicTacToeGame

--- a/src/Bundles/UIBundle/Styles/UIButton.styles.scss
+++ b/src/Bundles/UIBundle/Styles/UIButton.styles.scss
@@ -27,6 +27,11 @@
     height: 30px;
   }
 
+  &.size-tic-tac-toe {
+    width: 30px;
+    height: 30px;
+  }
+
   &.size-small {
     width: 16px;
     height: 14px;
