--- a/src/Bundles/TicTacToeBundle/Styles/TicTacToeBoard.styles.scss
+++ b/src/Bundles/TicTacToeBundle/Styles/TicTacToeBoard.styles.scss
@@ -11,5 +11,13 @@
   .field {
     text-align: center;
     @include font('bold', 12, 30);
+
+    &.is-player-x {
+      color: $cl-red;
+    }
+
+    &.is-player-o {
+      color: $cl-blue00;
+    }
   }
 }
