--- a/src/Bundles/DocumentationBundle/Styles/Documentation.styles.scss
+++ b/src/Bundles/DocumentationBundle/Styles/Documentation.styles.scss
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: 30% 70%;
     grid-template-rows: 100%;
+    gap: 3px;
     height: calc(100% - 20px);
     padding: 5px;
   }
