add styles table markdown

--- a/src/Bundles/MarkdownBundle/Styles/Markdown.styles.scss
+++ b/src/Bundles/MarkdownBundle/Styles/Markdown.styles.scss
@@ -11,6 +11,8 @@
 
     @import '@Bundles/MarkdownBundle/Styles/MarkdownList.styles';
 
+    @import '@Bundles/MarkdownBundle/Styles/MarkdownTable.styles';
+
     @import '@Bundles/MarkdownBundle/Styles/MarkdownText.styles';
     /* stylelint-enable no-invalid-position-at-import-rule */
   }
