--- a/src/Bundles/MarkdownBundle/Styles/MarkdownCode.styles.scss
+++ b/src/Bundles/MarkdownBundle/Styles/MarkdownCode.styles.scss
@@ -1,4 +1,8 @@
-code {
-  color: red;
-  // TODO add styles for code block
+pre {
+  @include font('medium', 12, 18);
+  font-style: italic;
+  background-color: var(--background-color-pulpit);
+  color: var(--text-color-2);
+  margin-bottom: 10px;
+  padding: 5px;
 }
