add documentation UserAgent

--- a/src/Bundles/DocumentationBundle/Styles/DocumentationContent.styles.scss
+++ b/src/Bundles/DocumentationBundle/Styles/DocumentationContent.styles.scss
@@ -2,6 +2,6 @@
   background-color: var(--background-color-white);
   height: 100%;
   box-shadow: var(--border-field);
-  padding: 2px 2px 2px 5px;
+  padding: 10px;
   overflow: scroll;
 }
