change import scss files in vue components

--- a/src/Assets/Styles/Config/config.styles.scss
+++ b/src/Assets/Styles/Config/config.styles.scss
@@ -1,9 +1,9 @@
-@import '@Assets/Variables/Colors.styles';
-@import '@Assets/Variables/Fonts.styles';
-@import '@Assets/Variables/Borders.styles';
-@import '@Assets/Utils/Fonts.styles';
-@import '@Assets/Utils/Hover.styles';
-@import '@Assets/Utils/Media.styles';
-@import '@Assets/Utils/Mixins.styles';
-@import '@Assets/General/Reset.styles';
-@import '@Assets/Variables/Root.styles';
+@import '../Variables/Colors.styles';
+@import '../Variables/Fonts.styles';
+@import '../Variables/Borders.styles';
+@import '../Utils/Fonts.styles';
+@import '../Utils/Hover.styles';
+@import '../Utils/Media.styles';
+@import '../Utils/Mixins.styles';
+@import '../General/Reset.styles';
+@import '../Variables/Root.styles';
