--- a/src/Bundles/App/MarkdownBundle/Styles/Markdown.styles.scss
+++ b/src/Bundles/App/MarkdownBundle/Styles/Markdown.styles.scss
@@ -1,19 +1,19 @@
 .Markdown {
   .markdown-content {
     /* stylelint-disable no-invalid-position-at-import-rule */
-    @import '@Bundles/MarkdownBundle/Styles/MarkdownCode.styles';
+    @import './MarkdownCode.styles';
 
-    @import '@Bundles/MarkdownBundle/Styles/MarkdownHeadings.styles';
+    @import './MarkdownHeadings.styles';
 
-    @import '@Bundles/MarkdownBundle/Styles/MarkdownLines.styles';
+    @import './MarkdownLines.styles';
 
-    @import '@Bundles/MarkdownBundle/Styles/MarkdownLink.styles';
+    @import './MarkdownLink.styles';
 
-    @import '@Bundles/MarkdownBundle/Styles/MarkdownList.styles';
+    @import './MarkdownList.styles';
 
-    @import '@Bundles/MarkdownBundle/Styles/MarkdownTable.styles';
+    @import './MarkdownTable.styles';
 
-    @import '@Bundles/MarkdownBundle/Styles/MarkdownText.styles';
+    @import './MarkdownText.styles';
     /* stylelint-enable no-invalid-position-at-import-rule */
   }
 }
