--- a/src/app/Bundles/UI/UIStepperBundle/Styles/UIStepper.styles.scss
+++ b/src/app/Bundles/UI/UIStepperBundle/Styles/UIStepper.styles.scss
@@ -1,10 +1,10 @@
-.CalendarYearSwitcher {
+.UIStepper {
   display: grid;
   grid-template-columns: 50px 20px;
   grid-template-rows: 10px 10px;
   width: 70px;
 
-  .year {
+  .field {
     grid-area: 1 / 1 / 3 / 2;
     background-color: var(--background-color-white);
     width: 50px;
