--- a/src/app/Bundles/Programs/TimerBundle/Styles/TimerPresets.styles.scss
+++ b/src/app/Bundles/Programs/TimerBundle/Styles/TimerPresets.styles.scss
@@ -3,4 +3,7 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
+  grid-area: 1 / 1 / 2 / 4;
+  margin-right: 0;
+  margin-left: 0;
 }
