--- a/src/app/Bundles/Programs/TimerBundle/Styles/TimerDisplay.styles.scss
+++ b/src/app/Bundles/Programs/TimerBundle/Styles/TimerDisplay.styles.scss
@@ -1,5 +1,6 @@
 .TimerDisplay {
-  grid-area: 3 / 1 / 5 / 3;
+  grid-area: 3/1/4/7;
+  justify-self: center;
   background-color: var(--background-color-white);
   max-width: 203px;
   width: 100%;
