--- a/src/app/Bundles/Programs/TimerBundle/Styles/Timer.styles.scss
+++ b/src/app/Bundles/Programs/TimerBundle/Styles/Timer.styles.scss
@@ -1,13 +1,22 @@
 .Timer {
   .content {
     display: grid;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 75px 30px 25px 25px;
+    grid-template-columns: repeat(6, 50px);
+    grid-template-rows: 75px 30px 50px 35px;
     padding: 0 10px 10px;
   }
 
   .button {
     max-width: 80px;
-    justify-self: flex-end;
+    justify-self: center;
+    margin-top: 10px;
+
+    &.is-start {
+      grid-area: 4/2/4/4;
+    }
+
+    &.is-reset {
+      grid-area: 4/6/4/4;
+    }
   }
 }
