--- a/src/app/Bundles/UI/UIRadioBundle/Styles/UIRadio.styles.scss
+++ b/src/app/Bundles/UI/UIRadioBundle/Styles/UIRadio.styles.scss
@@ -7,6 +7,11 @@
     }
   }
 
+  &.is-disabled {
+    pointer-events: none;
+    opacity: 0.5;
+  }
+
   .radio {
     display: flex;
     justify-content: center;
