--- a/src/app/Bundles/UI/UIStepperBundle/Styles/UIStepper.styles.scss
+++ b/src/app/Bundles/UI/UIStepperBundle/Styles/UIStepper.styles.scss
@@ -4,6 +4,11 @@
   grid-template-rows: 10px 10px;
   width: 70px;
 
+  &.is-disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
   .field {
     grid-area: 1 / 1 / 3 / 2;
     background-color: var(--background-color-white);
