set TimerDisplay with store

--- a/src/app/Bundles/UI/UIButtonBundle/Styles/UIButton.styles.scss
+++ b/src/app/Bundles/UI/UIButtonBundle/Styles/UIButton.styles.scss
@@ -9,6 +9,10 @@
   color: var(--text-color);
   box-shadow: var(--box-shadow-raised);
 
+  @include hover {
+    cursor: pointer;
+  }
+
   &:disabled {
     pointer-events: none;
     opacity: 0.5;
