--- a/src/app/Bundles/UI/UIButtonBundle/Styles/UIButton.styles.scss
+++ b/src/app/Bundles/UI/UIButtonBundle/Styles/UIButton.styles.scss
@@ -9,8 +9,13 @@
   color: var(--text-color);
   box-shadow: var(--box-shadow-raised);
 
+  @include hover {
+    cursor: pointer;
+  }
+
   &:disabled {
     pointer-events: none;
+    opacity: 0.5;
   }
 
   &:not(:disabled):active {
