--- a/core/design-system/configs/index.config.scss
+++ b/core/design-system/configs/index.config.scss
@@ -1,12 +1,12 @@
-@import '../src/styles/variables/color.var.scss';
-@import '../src/styles/variables/border.var.scss';
-@import '../src/styles/variables/font.var.scss';
-@import '../src/styles/utils/font-face.util.scss';
-@import '../src/styles/utils/media.util.scss';
-@import '../src/styles/mixins/font.mixin.scss';
-@import '../src/styles/mixins/hover.mixin.scss';
-@import '../src/styles/mixins/ui-range-thumb.mixin.scss';
-@import '../src/styles/mixins/ui-range-track.mixin.scss';
-@import '../src/styles/themes/light.theme.scss';
-@import '../src/styles/themes/dark.theme.scss';
-@import './reset.config.scss';
+@import '../src/styles/variables/color.var';
+@import '../src/styles/variables/border.var';
+@import '../src/styles/variables/font.var';
+@import '../src/styles/utils/font-face.util';
+@import '../src/styles/utils/media.util';
+@import '../src/styles/mixins/font.mixin';
+@import '../src/styles/mixins/hover.mixin';
+@import '../src/styles/mixins/ui-range-thumb.mixin';
+@import '../src/styles/mixins/ui-range-track.mixin';
+@import '../src/styles/themes/light.theme';
+@import '../src/styles/themes/dark.theme';
+@import './reset.config';
