--- a/mother-frontend/micro-apps/calendar/src/ui/features/wrapper/wrapper.style.scss
+++ b/mother-frontend/micro-apps/calendar/src/ui/features/wrapper/wrapper.style.scss
@@ -1,5 +1,8 @@
 .CalendarWrapper {
   display: grid;
   grid-template-columns: 90px 70px;
+  background-color: var(--background-color);
   gap: 10px 0;
+  max-width: 180px;
+  width: 100%;
 }
