--- a/mother-frontend/micro-apps/calendar/src/ui/features/days/days.styles.scss
+++ b/mother-frontend/micro-apps/calendar/src/ui/features/days/days.styles.scss
@@ -3,7 +3,7 @@
   height: 145px;
   box-shadow: var(--border-field);
   padding: 2px;
-  @include font('medium', 12, 20);
+  // @include font('medium', 12, 20);
   text-align: center;
   background-color: var(--background-color-white);
 
