fix(ds): ds-select - import module scss

--- a/core/design-system/src/components/ds-select/ds-select.module.scss
+++ b/core/design-system/src/components/ds-select/ds-select.module.scss
@@ -21,7 +21,8 @@
 }
 
 .label {
-	@include font('medium', 11, 14);
+	// @TODO - resolve problem with scss in playwright
+	// @include font('medium', 11, 14);
 	color: var(--text-color);
   }
 
@@ -33,6 +34,7 @@
 	box-shadow: var(--border-field);
 	padding: 5px 25px 5px 5px;
 	color: var(--text-color);
-	@include font('medium', 11, 13);
+	// @TODO - resolve problem with scss in playwright
+	// @include font('medium', 11, 13);
 }
   
