fix(ds): ds-select - import module scss in playwright

--- a/core/design-system/src/components/ds-select/ds-select.module.scss
+++ b/core/design-system/src/components/ds-select/ds-select.module.scss
@@ -21,8 +21,7 @@
 }
 
 .label {
-	// @TODO - resolve problem with scss in playwright
-	// @include font('medium', 11, 14);
+	@include font('medium', 11, 14);
 	color: var(--text-color);
   }
 
@@ -34,7 +33,6 @@
 	box-shadow: var(--border-field);
 	padding: 5px 25px 5px 5px;
 	color: var(--text-color);
-	// @TODO - resolve problem with scss in playwright
-	// @include font('medium', 11, 13);
+	@include font('medium', 11, 13);
 }
   
