--- a/core/design-system/src/components/ds-text/ds-text.module.scss
+++ b/core/design-system/src/components/ds-text/ds-text.module.scss
@@ -1,5 +1,4 @@
 .DSText {
-  // @TODO - resolve problem with scss in playwright
-  // @include font('medium', 11, 13);
+  @include font('medium', 11, 13);
   color: var(--text-color);
 }
