--- a/core/design-system/src/components/ds-select/ds-select.module.scss
+++ b/core/design-system/src/components/ds-select/ds-select.module.scss
@@ -1,32 +1,9 @@
-.DSSelect {
-  &.label-position-left {
-    display: grid;
-    align-items: center;
-
-    .label {
-      margin-right: 6px;
-    }
-  }
-
-  &.label-position-top {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    flex-basis: 200px;
-
-    .label {
-      margin-bottom: 5px;
-    }
-  }
-}
-
 .label {
   @include font('medium', 11, 14);
   color: var(--text-color);
 }
 
 .select {
-  position: relative;
   height: 21px;
   background: var(--background-color-white) url('/icons/select-button.svg')
     no-repeat top 2px right 2px;
@@ -34,4 +11,10 @@
   padding: 5px 25px 5px 5px;
   color: var(--text-color);
   @include font('medium', 11, 13);
+}
+
+.arrow {
+  position: relative;
+  right: 18px;
+  top: 3px;
 }
