--- a/core/design-system/src/components/ds-stepper/ds-stepper.module.scss
+++ b/core/design-system/src/components/ds-stepper/ds-stepper.module.scss
@@ -1,8 +1,19 @@
 .ds-stepper {
 	display: grid;
 	grid-template-columns: 50px 20px;
-	grid-template-rows: 10px 10px;
-	width: 70px;
+	grid-template-rows: repeat(2, 10px);
+
+	& > :nth-child(1) {
+		grid-area: 1 / 1 / 3 / 2;
+	}
+
+	& > :nth-child(2) {
+		grid-area: 1 / 2 / 2 / 3;
+	}
+
+	& > :nth-child(3) {
+		grid-area: 2 / 2 / 3 / 3;
+	}
 }
 
 .state-disabled {
