--- a/mother-frontend/micro-apps/calendar/src/ui/modules/days/days.styles.scss
+++ b/mother-frontend/micro-apps/calendar/src/ui/modules/days/days.styles.scss
@@ -3,22 +3,7 @@
   height: 145px;
   box-shadow: var(--border-field);
   padding: 2px;
-  // @include font('medium', 12, 20);
+  @include font('medium', 12, 20);
   text-align: center;
   background-color: var(--background-color-white);
-
-  .days {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-  }
-
-  .day {
-    height: 20px;
-
-    &.is-active {
-      color: $cl-white;
-      background-color: $cl-blue000;
-    }
-  }
 }
