style(ma): calendar - days

--- a/mother-frontend/micro-apps/calendar/src/ui/modules/days/days.module.scss
+++ b/mother-frontend/micro-apps/calendar/src/ui/modules/days/days.module.scss
@@ -1,9 +1,8 @@
-.CalendarDays {
+.days {
   width: 160px;
   height: 145px;
   box-shadow: var(--border-field);
   padding: 2px;
-  @include font('medium', 12, 20);
   text-align: center;
   background-color: var(--background-color-white);
 }
