feat(ds): add component ds-radio, refactor ds-icons

--- a/core/design-system/src/components/ds-radio/ds-radio.module.scss
+++ b/core/design-system/src/components/ds-radio/ds-radio.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+  position: relative;
   display: flex;
   align-items: center;
   column-gap: 6px;
@@ -15,16 +16,20 @@
   opacity: 0.5;
 }
 
-.radio {
-  height: 12px;
-  width: 12px;
-}
-
 .input {
-  width: 1px;
-  height: 1px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
 
   &[disabled] {
     pointer-events: none;
   }
+}
+
+.icon {
+  width: 12px;
+  height: 12px;
+  display: flex;
+  align-items: center;
 }
