--- a/core/design-system/src/components/ds-radio/ds-radio.module.scss
+++ b/core/design-system/src/components/ds-radio/ds-radio.module.scss
@@ -18,8 +18,8 @@
 
 .input {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 1px;
+  height: 1px;
   background-color: transparent;
 
   &[disabled] {
