--- a/micro-apps/src/ma-timer/src/ui/modules/screen/screen.module.scss
+++ b/micro-apps/src/ma-timer/src/ui/modules/screen/screen.module.scss
@@ -5,12 +5,14 @@
   background-color: var(--background-color-white);
   max-width: 203px;
   width: 100%;
+  height: 48px;
   padding: 5px;
   box-shadow: var(--border-field);
   @include font('bold', 39, 44);
   letter-spacing: 3px;
   color: var(--text-color);
   user-select: none;
+  margin: 0 auto 15px;
 }
 
 .time {
